# divvun-worker-tts

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.gnu  Dockerfile.musl  Justfile  README.md  build.rs  index.html  k8s-example.yaml  pyo3-mac.txt  x
.cargo/: config.toml
helm/divvun-worker-tts/: Chart.yaml  values.yaml
helm/divvun-worker-tts/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/: main.rs
