[package]
name = "divvun-worker-tts"
version = "0.1.0"
edition = "2024"

[features]
default = ["mp3"]
mp3 = ["mp3lame-encoder"]

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.6"
base64 = "0.22"
clap = { version = "4.5.31", features = ["derive", "env"] }
divvun-runtime = { git = "https://github.com/divvun/divvun-runtime.git", default-features = false, features = ["mod-speech", "mod-cg3", "mod-divvun", "mod-hfst"] }
futures-util = "0.3.31"
geoipd = { git = "https://github.com/necessary-nu/geoipd", version = "1.0.0" }
hound = "3.5.1"
mp3lame-encoder = { version = "0.1", optional = true }
poem = "3.0.1"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
